--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "osm-map",
-  "version": "0.0.1",
+  "version": "0.2.2",
   "authors": [
     "Fabian Bormann <fabian.bormann@student.uni-luebeck.de>"
   ],
@@ -9,6 +9,7 @@
     "web-component",
     "polymer",
     "osm",
+    "api",
     "maps",
     "navigation"
   ],
@@ -21,6 +22,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.2.0",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.0",
     "jquery": "~2.1.4"
   },
   "devDependencies": {
