--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.2.0",
     "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.0",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "paper-input": "PolymerElements/paper-input#~1.1.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
